--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     --main-bg-color: black;
     --main-text-color: white;
     --youTube-symbol-color: red;
+    --disabled: #717171;
 }
 
 body {
@@ -11,14 +12,9 @@ body {
     font-family: "Roboto", sans-serif;
   }
 
-
-/* @tailwind base;
-@tailwind components;
-@tailwind utilities; */
-
 .nav {
     height: 55px;
-    background-color: rgb(31, 12, 80);;
+    background-color: var(--main-bg-color);
     display: flex;
     gap: 10px;
     align-items: center;
@@ -110,7 +106,6 @@ flex-grow: 0.2;
 
 #content {
     grid-area: content;
-    background-color: aqua;
 }
 
 .menu__tile {
@@ -130,6 +125,44 @@ flex-grow: 0.2;
     padding-top: 20px;
 }
 
+.dashboard {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
+.dashboard__tile {
+    padding: 5px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+}
+
+.dashboard__tile__details {
+    display: flex;
+    align-items: center;
+}
+
+.dashboard__tile__details--circle {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+}
+
+.dashboard__tile__sub {
+    display: flex;
+    gap: 3px;
+    color: var(--disabled);
+}
+
+.loader {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+}
 
 
 
